--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,126 +1,225 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.gridlayout.widget.GridLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
     android:id="@+id/calc_layout"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/one_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+    <EditText
+        android:id="@+id/edit_field"
+        android:layout_width="296dp"
+        android:layout_height="38dp"
         app:layout_column="0"
-        app:layout_row="0" />
+        app:layout_row="0"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="102dp" />
 
-    <Button
-        android:id="@+id/two_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/gridLayout"
+        android:layout_width="356dp"
+        android:layout_height="285dp"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="446dp">
 
-    <Button
-        android:id="@+id/three_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        <Button
+            android:id="@+id/one_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
+            android:layout_marginRight="2dp"
+            android:text="@string/one"
+            app:layout_column="0"
+            app:layout_constraintEnd_toStartOf="@+id/two_button"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/two_button"
+            app:layout_row="2" />
 
-    <Button
-        android:id="@+id/four_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_column="0"
-        app:layout_row="1" />
+        <Button
+            android:id="@+id/two_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/two"
+            app:layout_column="1"
+            app:layout_constraintBaseline_toBaselineOf="@+id/three_button"
+            app:layout_constraintEnd_toStartOf="@+id/three_button"
+            app:layout_constraintStart_toEndOf="@+id/one_button"
+            app:layout_row="2" />
 
-    <Button
-        android:id="@+id/fjive_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        <Button
+            android:id="@+id/three_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/three"
+            app:layout_column="2"
+            app:layout_constraintEnd_toStartOf="@+id/minus_button"
+            app:layout_constraintStart_toEndOf="@+id/two_button"
+            app:layout_constraintTop_toBottomOf="@+id/add_button"
+            app:layout_row="2" />
 
-    <Button
-        android:id="@+id/six_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        <Button
+            android:id="@+id/four_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
+            android:layout_marginRight="2dp"
+            android:text="@string/four"
+            app:layout_column="0"
+            app:layout_constraintEnd_toStartOf="@+id/five_button"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/one_button"
+            app:layout_row="3" />
 
-    <Button
-        android:id="@+id/seven_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_column="0"
-        app:layout_row="2" />
+        <Button
+            android:id="@+id/five_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/five"
+            app:layout_column="1"
+            app:layout_constraintBaseline_toBaselineOf="@+id/six_button"
+            app:layout_constraintEnd_toStartOf="@+id/six_button"
+            app:layout_constraintStart_toEndOf="@+id/four_button"
+            app:layout_row="3" />
 
-    <Button
-        android:id="@+id/eight_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        <Button
+            android:id="@+id/six_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/six"
+            app:layout_column="2"
+            app:layout_constraintEnd_toStartOf="@+id/multiply_button"
+            app:layout_constraintStart_toEndOf="@+id/five_button"
+            app:layout_constraintTop_toBottomOf="@+id/minus_button"
+            app:layout_row="3" />
 
-    <Button
-        android:id="@+id/nine_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        <Button
+            android:id="@+id/seven_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
+            android:layout_marginRight="2dp"
+            android:text="@string/seven"
+            app:layout_column="0"
+            app:layout_constraintEnd_toStartOf="@+id/eight_button"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/four_button"
+            app:layout_row="4" />
 
-    <Button
-        android:id="@+id/zero_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_column="1"
-        app:layout_row="3" />
+        <Button
+            android:id="@+id/eight_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/eight"
+            app:layout_constraintBaseline_toBaselineOf="@+id/nine_button"
+            app:layout_constraintEnd_toStartOf="@+id/nine_button"
+            app:layout_constraintStart_toEndOf="@+id/seven_button" />
 
-    <Button
-        android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_column="3"
-        app:layout_row="0" />
+        <Button
+            android:id="@+id/nine_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/nine"
+            app:layout_constraintEnd_toStartOf="@+id/division_button"
+            app:layout_constraintStart_toEndOf="@+id/eight_button"
+            app:layout_constraintTop_toBottomOf="@+id/multiply_button" />
 
-    <Button
-        android:id="@+id/minus_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_column="3"
-        app:layout_row="1" />
+        <Button
+            android:id="@+id/zero_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/zero"
+            app:layout_column="1"
+            app:layout_constraintBaseline_toBaselineOf="@+id/clear_button"
+            app:layout_constraintEnd_toStartOf="@+id/clear_button"
+            app:layout_constraintStart_toEndOf="@+id/decimal_point"
+            app:layout_row="5" />
 
-    <Button
-        android:id="@+id/multiply_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_column="3"
-        app:layout_row="2" />
+        <Button
+            android:id="@+id/add_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
+            android:text="@string/addition"
+            app:layout_column="3"
+            app:layout_constraintStart_toStartOf="@+id/minus_button"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_row="1" />
 
-    <Button
-        android:id="@+id/clear_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_column="0"
-        app:layout_row="3" />
+        <Button
+            android:id="@+id/minus_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/subtract"
+            app:layout_column="3"
+            app:layout_constraintBaseline_toBaselineOf="@+id/three_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/three_button"
+            app:layout_row="2" />
 
-    <Button
-        android:id="@+id/equals_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_column="2"
-        app:layout_row="3" />
+        <Button
+            android:id="@+id/multiply_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/multiplication"
+            app:layout_column="3"
+            app:layout_constraintBaseline_toBaselineOf="@+id/six_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/six_button"
+            app:layout_row="3" />
 
-    <Button
-        android:id="@+id/division_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        <Button
+            android:id="@+id/clear_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/erase"
+            app:layout_column="2"
+            app:layout_constraintEnd_toStartOf="@+id/equals_button"
+            app:layout_constraintStart_toEndOf="@+id/zero_button"
+            app:layout_constraintTop_toBottomOf="@+id/division_button"
+            app:layout_row="5" />
 
-</androidx.gridlayout.widget.GridLayout>
+        <Button
+            android:id="@+id/equals_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/total"
+            app:layout_column="3"
+            app:layout_constraintBaseline_toBaselineOf="@+id/clear_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/clear_button"
+            app:layout_row="5" />
+
+        <Button
+            android:id="@+id/division_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/division"
+            app:layout_column="3"
+            app:layout_constraintBaseline_toBaselineOf="@+id/nine_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/nine_button"
+            app:layout_row="4" />
+
+        <Button
+            android:id="@+id/decimal_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
+            android:layout_marginRight="2dp"
+            android:text="@string/decimal"
+            app:layout_column="0"
+            app:layout_constraintEnd_toStartOf="@+id/zero_button"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seven_button"
+            app:layout_row="5" />
+
+
+    </androidx.gridlayout.widget.GridLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
