Add Onclicklisteners for each button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,28 +8,37 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
+    <TextView
         android:id="@+id/edit_field"
-        android:layout_width="296dp"
-        android:layout_height="38dp"
-        app:layout_column="0"
-        app:layout_row="0"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="102dp" />
+        android:layout_width="344dp"
+        android:layout_height="105dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="208dp"
+        android:gravity="right|center_vertical"
+        android:maxLength="16"
+        android:padding="10dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/gridLayout"
-        android:layout_width="356dp"
-        android:layout_height="285dp"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="446dp">
+        android:layout_width="0dp"
+        android:layout_height="286dp"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/one_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
             android:text="@string/one"
             app:layout_column="0"
             app:layout_constraintEnd_toStartOf="@+id/two_button"
@@ -42,6 +51,7 @@
             android:id="@+id/two_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
             android:text="@string/two"
             app:layout_column="1"
             app:layout_constraintBaseline_toBaselineOf="@+id/three_button"
@@ -53,6 +63,7 @@
             android:id="@+id/three_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
             android:text="@string/three"
             app:layout_column="2"
             app:layout_constraintEnd_toStartOf="@+id/minus_button"
@@ -65,7 +76,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
             android:text="@string/four"
             app:layout_column="0"
             app:layout_constraintEnd_toStartOf="@+id/five_button"
@@ -101,7 +111,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
             android:text="@string/seven"
             app:layout_column="0"
             app:layout_constraintEnd_toStartOf="@+id/eight_button"
@@ -124,9 +133,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/nine"
+            app:layout_column="2"
             app:layout_constraintEnd_toStartOf="@+id/division_button"
             app:layout_constraintStart_toEndOf="@+id/eight_button"
-            app:layout_constraintTop_toBottomOf="@+id/multiply_button" />
+            app:layout_constraintTop_toBottomOf="@+id/multiply_button"
+            app:layout_row="4" />
 
         <Button
             android:id="@+id/zero_button"
@@ -210,7 +221,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
             android:text="@string/decimal"
             app:layout_column="0"
             app:layout_constraintEnd_toStartOf="@+id/zero_button"
